2007-02-10  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 
	
	* unichrome/via_accel.c: (viaFlushDRIEnabled),
	(viaSubsequentSolidTwoPointLine):

	Fix possible line clipping bug.
	
2007-02-06  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_driver.c:

	Try CR39 when CR34 says zero during memory detection on
	the CLE266.  Idea from Luc Verhaegen, patch by Mark Huijgen
	<mark-dot-sf-dot-net-at-huijgen-dot-tk>.

2007-01-20  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* ChangeLog

	Switch encoding of ChangeLog file to Unicode.
	Whitespace and format adjustments.

2007-01-20  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_driver.c: (VIALoadRgbLut), (VIALoadPalette),
	(VIAScreenInit):

	Add ability to change gamma setting.  Original patch by
	Gonzalo A. de la Vega <gadelavega-at-gmail-dot-com>,
	adapted	from Luc Verhaegen's implementation.

2006-12-28  Thomas Hellström  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_accel.c: (viaExaTexUploadToScreen):

	Work around an obscure hardware limitation when texturing from
	AGP.

2006-12-28  Thomas Hellström  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_dri.c: (VIASetAgpMode):

	Fix AGP mode setting.

2006-12-28  Thomas Hellström  <thomas-at-tungstengraphics-dot-com> 

	Use non-power-of-two textures for EXA whenever possible.

2006-12-07  Thomas Hellström  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIAEnterVT):

	Initialize the AGP ring buffer before command submission.

2006-12-07  Thomas Hellström  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIAEnterVT):

	Blank and clear screen when entering VT.

2006-12-07  Thomas Hellström  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_accel.c: (viaAccelDMADownload),
	(viaExaDownloadFromScreen), (viaInitExa):

	Indent via_accel.c

2006-12-07  Thomas Hellström  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_accel.c: (viaAccelDMADownload):
